--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
   </div>
   <div class="about">
     <div class="container p-5 mt-5 mb-5">
-      <h1 class="text-center mb-5 pb-5 pt-5">  Designed for the future</h1>
+      <h1 class="text-center mb-5 mb-sm-3 pb-sm-3 pb-5 pt-5">  Designed for the future</h1>
+      <img class="img-fluid" id="aboutImg" src="images/illustration-laptop-desktop.svg">
       <div class="row mt-5 d-block ps-5 pb-5">
-        <div class="col-6 me-5 d-block mt-5">
+        <div class="col-lg-6 col-sm-12 me-5 d-block mt-5">
           <h3 class="mb-4">  Introducing an extensible editor</h3>
           <p class="text-black-50">  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
             The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
             videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
             change the looks of a blog.</p>
         </div>
-        <div class="col-5 pb-1 mt-5 ">
+        <div class="col-lg-6 col-sm-12 pb-1 mt-5 ">
           <h3 class="mb-4"> Robust content management </h3> 
           <p class="text-black-50">Flexible content management enables users to easily move through posts. Increase the usability of your blog 
           by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
@@ -93,9 +94,9 @@
     </div>
   </div>
   <div class="work p-5 mb-5">
-    <img src="images/illustration-phones.svg" class="position-absolute img-fluid">
-    <div  class="row justify-content-end p-5">
-      <div class="col-5 p-4">
+    <img src="images/illustration-phones.svg" class="img-fluid" id="workImg">
+    <div  class="row justify-content-end p-5 m-lg-5 ms-md-0 pt-sm-0">
+      <div class="col-lg-5 col-md-12 p-4 p-sm-0">
         <h3 class="text-white"> State of the Art Infrastructure</h3>
         <p class="text-white-50">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
@@ -103,8 +104,9 @@
     </div>
   </div>
   <div class="tools p-5 mt-5 mb-5">
-    <div class="row justify-content-end p-5 mt-5">
-      <div class="col-6 mt-5">
+    <img class="img-fluid" id="aboutImg" src="images/illustration-laptop-desktop.svg">
+    <div class="row justify-content-end p-lg-5 mt-lg-5 p-md-1 mt-md-1  p-sm-1 mt-sm-1 ">
+      <div class="col-lg-6 col-sm-12 mt-5">
         <h4 class="mb-4">Free, open, simple</h4>
         <p class="text-black-50 mb-5">Blogr is a free and open source application backed by a large community of helpful developers. It supports 
           features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
@@ -118,10 +120,10 @@
   </div>
   <footer class="p-5">
     <div class="row ps-5">
-      <div class="col-3">
+      <div class="col-lg-3 col-md-3 col-sm-6 mb-4">
         <img src="images/logo.svg">
       </div>
-      <div class="col-3">
+      <div class="col-lg-3 col-md-3 col-sm-6 mb-4">
         <ul>
           <label class="mb-4"> Product</label>
           <li> Overview</li>
@@ -131,7 +133,7 @@
           <li> Integrations</li>
         </ul>
       </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-6 mb-4">
         <ul>
           <label class="mb-4">Company</label>
           <li>About</li>
@@ -140,7 +142,7 @@
           <li>Careers</li>
         </ul>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-sm-6 mb-4">
         <ul>
           <label class="mb-4">Connect</label>
           <li>Contact</li>
